# SummerTTS

./: CMakeLists.txt  README.md  test.txt  test_eng.txt
include/: SynthesizerTrn.h  tts_file_io.h  tts_logger.h  utils.h
models/: models.txt
src/engipa/: EnglishText2Id.cpp  InitIPASymbols.cpp  InitIPASymbols.h  alphabet.cpp  ipa.cpp
src/header/: ConvFlow.h  DDSConv.h  DurationPredictor_base.h  ElementwiseAffine.h  EnglishText2Id.h  FixDurationPredictor.h  Generator.h  Generator_Istft.h  Generator_MBB.h  Generator_MS.h  Generator_base.h  Generator_hifigan.h  Hanz2Piny.h  ResBlock1.h  ResidualCouplingBlock.h  ResidualCouplingLayer.h  StochasticDurationPredictor.h  TextEncoder.h  WN.h  attention_encoder.h  ffn.h  hanzi2phoneid.h  iStft.h  multi_head_attention.h  nn_clamp_min.h  nn_conv1d.h  nn_conv1d_transposed.h  nn_cumsum.h  nn_flip.h  nn_gelu.h  nn_layer_norm.h  nn_leaky_relu.h  nn_relu.h  nn_sigmoid.h  nn_softmax.h  nn_softplus.h  nn_tanh.h  pinyinmap.h  pqmf.h  random_gen.h
src/header/cppjieba/: DictTrie.hpp  HMMModel.hpp  Jieba.hpp  KeywordExtractor.hpp
src/hz2py/: Hanz2Piny.cpp  hanzi2phoneid.cpp  pinyinmap.cpp
src/models/: DurationPredictor_base.cpp  FixDurationPredictor.cpp  Generator.cpp  Generator_Istft.cpp  Generator_MBB.cpp  Generator_MS.cpp  Generator_base.cpp  Generator_hifigan.cpp  ResidualCouplingBlock.cpp  StochasticDurationPredictor.cpp  SynthesizerTrn.cpp  TextEncoder.cpp
src/modules/: ConvFlow.cpp  DDSConv.cpp  ElementwiseAffine.cpp  ResBlock1.cpp  ResidualCouplingLayer.cpp  WN.cpp  attention_encoder.cpp  ffn.cpp  hann.cpp  iStft.cpp  multi_head_attention.cpp  pqmf.cpp  random_gen.cpp
src/nn_op/: nn_clamp_min.cpp  nn_conv1d.cpp  nn_conv1d_transposed.cpp  nn_cumsum.cpp  nn_flip.cpp  nn_gelu.cpp  nn_layer_norm.cpp  nn_leaky_relu.cpp  nn_relu.cpp  nn_sigmoid.cpp  nn_softmax.cpp  nn_softplus.cpp  nn_tanh.cpp
src/platform/: tts_file_io.cpp  tts_logger.cpp
src/tn/: processor.cc  processor_main.cc
src/tn/gflags/src/: config.h
src/tn/glog/src/: demangle.h  raw_logging.cc  signalhandler.cc  stacktrace.h  symbolize.cc  symbolize.h  utilities.h
src/tn/glog/src/base/: commandlineflags.h  mutex.h
src/tn/header/gflags/: defines.h
src/tn/header/glog/: config.h  logging.h
src/tn/header/processor/: processor.h
src/utils/: utils.cpp
test/: main.cpp
